tests/golden/errors/int_from_float_nan.py
inf = 1e400
print(int(inf - inf))
